added rss and atom feeds to base.html and url

--- a/techism/templates/base.html
+++ b/techism/templates/base.html
@@ -37,6 +37,8 @@
             </div>
             <div id="right">
                 <ul>
+                    <li><a href="/feed.ics">iCal</a></li>
+                    <li><a href="/feeds/atom/upcomming_events">RSS</a></li>
                     <li><a href="http://twitter.com/techism">Twitter</a></li>
                 </ul>
             </div>
