--- a/techism/templates/events/index.html
+++ b/techism/templates/events/index.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
+{% block head %}
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.css" />
+    <!--[if lte IE 8]>
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.ie.css" />
+    <![endif]-->
+    <script src="http://cdn.leafletjs.com/leaflet-0.4/leaflet.js"></script>
+    <script src="{% static 'js/jquery-1.8.2.min.js' %}"></script>
+    <script src="{% static 'js/maps.js' %}"></script>
+    <script src="{% static 'js/events/index.js' %}"></script>
+{% endblock %}
+
 {% block content %}
 <section id="content">
     {% if event_list %}
