--- a/techism/templates/events/details.html
+++ b/techism/templates/events/details.html
@@ -20,8 +20,7 @@
     <article class="event">
         <section class="detail">
             <h3>Dieses Event ist noch nicht veröffentlicht.</h3>
-            <p class="description">Neue Events werden erst nach einem Review freigeschaltet - leider nötig um
-                "Spam"-Listungen zu vermeiden.</p>
+            <p class="description">Neue Events werden erst nach einem Review freigeschaltet.</p>
         </section>
     </article>
     {% endif %}
