--- a/techism/templates/base.html
+++ b/techism/templates/base.html
@@ -47,6 +47,7 @@
             </div>
         </div>
     </footer>
+    <script src="{% static 'js/jquery-1.8.2.min.js' %}"></script>
     {% block scripts %} {% endblock %}
 </body>
 </html>
