--- a/techism/templates/events/create.html
+++ b/techism/templates/events/create.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block head %}
     <title>Techism - Create new Event</title>
     <meta name="description" content="Techism - Create new Event" />
     <meta name="keywords" content="techism create event" />
+    <link rel="stylesheet" href="{% static 'css/smoothness/jquery-ui-1.9.1.custom.min.css' %}" type="text/css" media="screen" />
 {% endblock %}
 
 
@@ -83,7 +85,7 @@
                         </div>
                     </p>
                 </div>
-                <div id="map_canvas"></div>
+                <div class="where"></div>
                 {% if mode == 'CREATE' %}
                     <div class="row submit"><p><input type="submit" value="Event hinzuf&uuml;gen" /></p></div> 
                 {% endif %}
@@ -93,5 +95,7 @@
 {% endblock %}
 
 {% block scripts %}
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <script src="{% static 'js/jquery.ui.datepicker-de.js' %}"></script>
+  <script src="{% static 'js/jquery-ui-1.9.1.custom.min.js' %}"></script>
+  <script src="{% static 'js/events/create.js' %}"></script>
 {% endblock %}
