--- a/techism/templates/events/index.html
+++ b/techism/templates/events/index.html
@@ -6,10 +6,7 @@
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.ie.css" />
     <![endif]-->
-    <script src="http://cdn.leafletjs.com/leaflet-0.4/leaflet.js"></script>
-    <script src="{% static 'js/jquery-1.8.2.min.js' %}"></script>
-    <script src="{% static 'js/maps.js' %}"></script>
-    <script src="{% static 'js/events/index.js' %}"></script>
+
 {% endblock %}
 
 {% block content %}
@@ -25,4 +22,11 @@
 
 {% include "events/_tagcloud.html" %}
 
+{% endblock %}
+
+
+{% block scripts %}
+    <script src="http://cdn.leafletjs.com/leaflet-0.4/leaflet.js"></script>
+    <script src="{% static 'js/maps.js' %}"></script>
+    <script src="{% static 'js/events/index.js' %}"></script>
 {% endblock %}
