--- a/techism/templates/events/index.html
+++ b/techism/templates/events/index.html
@@ -26,7 +26,7 @@
 
 
 {% block scripts %}
-    <script src="http://cdn.leafletjs.com/leaflet-0.4/leaflet.js"></script>
+    <script src="{% static 'js/leaflet.js' %}"></script>
     <script src="{% static 'js/maps.js' %}"></script>
     <script src="{% static 'js/events/index.js' %}"></script>
 {% endblock %}
