--- a/techism/templates/events/create.html
+++ b/techism/templates/events/create.html
@@ -96,6 +96,7 @@
 {% endblock %}
 
 {% block scripts %}
+  <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
   <script src="{% static 'js/maps.js' %}"></script>
   <script src="{% static 'js/jquery.ui.datepicker-de.js' %}"></script>
   <script src="{% static 'js/jquery-ui-1.9.1.custom.min.js' %}"></script>
