--- a/techism/templates/events/index.html
+++ b/techism/templates/events/index.html
@@ -2,11 +2,10 @@
 {% load staticfiles %}
 
 {% block head %}
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.css" />
+    <link rel="stylesheet" href="{% static 'leaflet-0.4.5/leaflet.css' %}" />
     <!--[if lte IE 8]>
-        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4/leaflet.ie.css" />
+        <link rel="stylesheet" href="{% static 'leaflet-0.4.5/leaflet.ie.css' %}" />
     <![endif]-->
-
 {% endblock %}
 
 {% block content %}
@@ -24,9 +23,8 @@
 
 {% endblock %}
 
-
 {% block scripts %}
-    <script src="{% static 'js/leaflet.js' %}"></script>
+    <script src="{% static 'leaflet-0.4.5/leaflet.js' %}"></script>
     <script src="{% static 'js/maps.js' %}"></script>
     <script src="{% static 'js/events/index.js' %}"></script>
 {% endblock %}
