Create form: save event tags, added dynamic map, autocompletion for location. Changed some css classes.

--- a/techism/templates/404.html
+++ b/techism/templates/404.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <section id="content">
-    <article class="event">
+    <article class="vevent">
         <section>
             <p>Not Found!</p>
         </section>
