--- a/techism/templates/events/details.html
+++ b/techism/templates/events/details.html
@@ -13,7 +13,7 @@
     {% if event.published %}
         {% include "events/_event_details.html" %}
     {% else %}
-    <article class="event">
+    <article class="vevent">
         <section class="detail">
             <h3>Dieses Event ist noch nicht veröffentlicht.</h3>
             <p class="description">Neue Events werden erst nach einem Review freigeschaltet.</p>
