--- a/techism/templates/events/create.html
+++ b/techism/templates/events/create.html
@@ -2,10 +2,11 @@
 {% load staticfiles %}
 
 {% block head %}
-    <title>Techism - Create new Event</title>
-    <meta name="description" content="Techism - Create new Event" />
-    <meta name="keywords" content="techism create event" />
     <link rel="stylesheet" href="{% static 'css/smoothness/jquery-ui-1.9.1.custom.min.css' %}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{% static 'leaflet-0.4.5/leaflet.css' %}" />
+    <!--[if lte IE 8]>
+        <link rel="stylesheet" href="{% static 'leaflet-0.4.5/leaflet.ie.css' %}" />
+    <![endif]-->
 {% endblock %}
 
 
@@ -60,13 +61,10 @@
                   </div>
                 </div>
                 <div id="where">
-                    <div class="row"><h3>Wo</h3></div> 
+                    <div class="row"><h3>Wo</h3></div>
                     <div class="row">
-                        <label>Veranstaltungsort wählen</label>
-                        {{ form.location }}     
+                        {{ form.location }}
                     </div>
-                    <div class="row"><p><strong>oder</strong></p></div>
-                    <div class="row">Neuen Veranstaltungsort anlegen</div><br>
                     <div class="row">
                         {{ form.location_name.label_tag }} {{ form.location_name.errors }}
                         {{ form.location_name }}
@@ -82,7 +80,7 @@
                     <p>
                         <div class="row submit">
                             <input id="id_location_show_in_map" onclick="displayLocation(id_{{ form.location_street.html_name }}.value, id_{{ form.location_city.html_name }}.value)" 
-                                 type="button" value="Adresse in OpenStreetMap anzeigen">
+                                 type="button" value="Koordinaten auf Karte suchen">
                         </div>
                     </p>
                 </div>
@@ -96,7 +94,7 @@
 {% endblock %}
 
 {% block scripts %}
-  <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
+  <script src="{% static 'leaflet-0.4.5/leaflet.js' %}"></script>
   <script src="{% static 'js/maps.js' %}"></script>
   <script src="{% static 'js/jquery.ui.datepicker-de.js' %}"></script>
   <script src="{% static 'js/jquery-ui-1.9.1.custom.min.js' %}"></script>
