--- a/techism/templates/base.html
+++ b/techism/templates/base.html
@@ -21,8 +21,7 @@
                     <li><a href="/"><img width="105" height="33" src="{% static 'images/techism_logo_05.png' %}" alt="Techism">
                     <li{% if '/events/' in request.path or '/' == request.path %} id="active"{% endif %}><a href="/events/">Events</a></li> 
                     <li id="add"><a href="/events/create/">+</a></li>
-                    
-                    
+                    <li{% if '/orgs/' in request.path %} id="active"{% endif %}><a href="/orgs/">Gruppen</a></li>
                     </a></li>
                 </ul>
             </div>
