--- a/techism/templates/events/index.html
+++ b/techism/templates/events/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block head %}
-    <link rel="stylesheet" href="{% static 'leaflet-0.4.5/leaflet.css' %}" />
+    <link rel="stylesheet" href="{% static 'leaflet-0.4.5/leaflet.css' %}" type="text/css"/>
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="{% static 'leaflet-0.4.5/leaflet.ie.css' %}" />
     <![endif]-->
