--- a/techism/templates/events/_event_details.html
+++ b/techism/templates/events/_event_details.html
@@ -9,6 +9,15 @@
                     <a id="{{ event.id }}_event" href="#event">{{ event.title }}</a>
                 </h2>
             </div>
+            {% if event.user == user or user.is_superuser %}
+                <div class="edit"> 
+                    <div class="box">
+                        <a href="/events/edit/{{ event.id }}/">Ändern</a>
+                        <a href="/events/cancel/{{ event.id }}/">Absagen</a>
+                        <a href="/events/create/{{ event.id }}/">Kopieren</a>
+                    </div>
+                </div>
+            {% endif %}
             <div class="date">
                 <div class="box">{{ event.date_time_begin|display_date }}</div>
             </div>
@@ -52,11 +61,11 @@
 
                 {% if event.date_time_end %} bis
                   <div class="dtend"> {{ event.date_time_end|date:"c" }}</div>
-				  {% if event.date_time_begin|localtime|date:"YMd" != event.date_time_end|localtime|date:"YMd" %}
-					   {{ event.date_time_end|display_date }}
-					{% else %}
-					   {{ event.date_time_end|time:"H:i" }}
-					{% endif %}
+                    {% if event.date_time_begin|localtime|date:"YMd" != event.date_time_end|localtime|date:"YMd" %}
+                      {{ event.date_time_end|display_date }}
+                    {% else %}
+                       {{ event.date_time_end|time:"H:i" }}
+                    {% endif %}
                 {% endif %}
             </div>
         </section>
