--- a/techism/templates/events/create.html
+++ b/techism/templates/events/create.html
@@ -95,6 +95,8 @@
                 </div>
                 {% if mode == 'CREATE' %}
                     <div class="row submit"><p><input type="submit" value="Event hinzuf&uuml;gen" /></p></div> 
+                {% elif mode == 'EDIT' %}
+                    <div class="row submit"><p><input type="submit" value="Event &auml;ndern" /></p></div> 
                 {% endif %}
             </form>
         </div>
