--- a/techism/templates/events/index.html
+++ b/techism/templates/events/index.html
@@ -40,7 +40,7 @@
 
 {% block scripts %}
     <script src="{% static 'leaflet-0.4.5/leaflet.js' %}"></script>
-    <script src="{% static 'js/jquery-infinitescroll-1.5.100504.min.js' %}"></script>
+    <script src="{% static 'jquery-infinitescroll-1.5.100504/jquery-infinitescroll-1.5.100504.min.js' %}"></script>
     <script src="{% static 'js/maps.js' %}"></script>
     <script src="{% static 'js/events/index.js' %}"></script>
 {% endblock %}
