--- a/techism/templates/base.html
+++ b/techism/templates/base.html
@@ -55,7 +55,7 @@
         </div>
     </footer>
     <script src="{% static 'js/techism.js' %}"></script>
-    <script src="{% static 'js/jquery-1.8.2.min.js' %}"></script>
+    <script src="{% static 'jquery-1.8.2/jquery-1.8.2.min.js' %}"></script>
     {% block scripts %} {% endblock %}
 </body>
 </html>
