--- a/techism/templates/events/create.html
+++ b/techism/templates/events/create.html
@@ -88,7 +88,7 @@
                     </div>
                     <p/>
                     <div class="row">
-                        Bitte die genauen Koordinaten des Veranstaltungsortes in der Karte markieren.
+                        Bitte den genauen Veranstaltungsort ggf. durch Verschieben des Markers markieren.
                     </div>
                     <p/>
                     <div id="map_canvas"></div>
