--- a/techism/templates/events/_event_details.html
+++ b/techism/templates/events/_event_details.html
@@ -42,7 +42,7 @@
                     Webseite des Veranstalters</a>
             </p>
             <p class="ical">
-                <a href="/ical/{{ event.id }}.ics"><img src="{% static 'images/date.png' %}"> iCal Export</a><br />
+                <a href="/ical/{{ event.id }}.ics"><img src="{% static 'images/date.png' %}"> iCal Export</a> &nbsp;
                 <a href="webcal://{{ hostname }}/ical/{{ event.id }}.ics"> <img src="{% static 'images/date.png' %}">
                     WebCal
                 </a>
