show description for organizations

--- a/techism/templates/organizations/index.html
+++ b/techism/templates/organizations/index.html
@@ -13,7 +13,9 @@
             <div class="organizations" >
                 <h2>{{ organization.title }}</h2>
                 <p class="description">
+                    {{ organization.description }}<br>
                     <a target="_blank" href="{{ organization.url }}">{{ organization.url }}</a>
+                    
                 </p>
                 <p class="tags">
                           {% for tag in organization.tags.all %}  
