added masonry for organizations layout

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -292,4 +292,6 @@ textarea:focus {
   color: #3b3b3b;
 }
 .canceled { text-decoration: line-through; }
-.organizations { max-width:400px;padding: 10px 15px 10px 15px;}
+.organizations { max-width:400px;padding: 10px 15px 10px 15px; float:left;
+border: 1px solid grey;  margin: 5px; border-radius: 5px;word-wrap:break-word;
+}
