--- a/techism/templates/organizations/index.html
+++ b/techism/templates/organizations/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block head %}
     <title>Techism - {{ tag_name|default:'Events, Projekte, User Groups in München!' }}</title>
@@ -7,15 +8,16 @@
 {% endblock %}
 
 {% block content %}
-<section id="content">
+<div id="content">
     {% if organization_list %}
         {% for organization in organization_list %}
             <div class="organizations" >
                 <h2>{{ organization.title }}</h2>
                 <p class="description">
-                    {{ organization.description }}<br>
+                    {{ organization.description }}
+                </p>
+                <p class="description">
                     <a target="_blank" href="{{ organization.url }}">{{ organization.url }}</a>
-                    
                 </p>
                 <p class="tags">
                           {% for tag in organization.tags.all %}  
@@ -30,8 +32,13 @@
         </section>
     {% endif %} 
     
-</section>
+</div>
 
 {% include "organizations/_tagcloud.html" %}
 
+{% endblock %}
+
+{% block scripts %}
+    <script src="{% static 'js/organizations/index.js' %}"></script>
+    <script src="{% static 'jquery-masonry-2.1.06/jquery.masonry.min.js' %}"></script>
 {% endblock %}
