--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,6 +73,9 @@ a {
   font-weight: bold;
   text-decoration: none;
 }
+.vevent .detail a {
+	font-size: 15px;
+}
 a img { border: 0; }
 a:hover { text-decoration: underline; }
 h1 {
