--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@ body {
   padding: 5px;
 }
 #active a {
-  color: #00ff00;
+  color: #aaff00;
   text-decoration: none;
 }
 nav div ul {
@@ -133,8 +133,8 @@ h3 {
 #tagcloud a.tag7 { color: #efefef; }
 #tagcloud a.tag8 { color: #f7f7f7; }
 #tagcloud a.tag9 { color: #ffffff; }
-#tagcloud a:hover { border: 1px solid #00ff00; }
-#tagcloud .selected { border: 1px solid #00ff00; }
+#tagcloud a:hover { border: 1px solid #aaff00; }
+#tagcloud .selected { border: 1px solid #aaff00; }
 .tags a {
   background:#efefef;
   color: #999;
@@ -143,8 +143,8 @@ h3 {
   text-decoration: none;
   line-height: 40px;
 }
-.tags a:hover { border: 1px solid #00ff00; }
-.tags .selected { border: 1px solid #00ff00; }
+.tags a:hover { border: 1px solid #aaff00; }
+.tags .selected { border: 1px solid #aaff00; }
 #top li a img { opacity: 0.5; }
 #top a:hover img { opacity: 0.7; }
 #top #logo { display: inline; }
@@ -227,7 +227,7 @@ footer ul li { margin-right: 10px; }
 #message p { margin-bottom: 0px; }
 #message.bottom { border-bottom: none; }
 .errorlist {
-  color: #00ff00;
+  color: #aaff00;
   background: #424242;
   border-radius: 5px;
   padding: 5px;
