--- a/static/css/style.css
+++ b/static/css/style.css
@@ -133,8 +133,8 @@ h3 {
 #tagcloud a.tag7 { color: #efefef; }
 #tagcloud a.tag8 { color: #f7f7f7; }
 #tagcloud a.tag9 { color: #ffffff; }
-#tagcloud a:hover { border: 1px solid #aaff00; }
-#tagcloud .selected { border: 1px solid #aaff00; }
+#tagcloud a:hover { color: #aaff00; }
+#tagcloud .selected { color: #aaff00; }
 .tags a {
   background:#efefef;
   color: #999;
@@ -143,8 +143,8 @@ h3 {
   text-decoration: none;
   line-height: 40px;
 }
-.tags a:hover { border: 1px solid #aaff00; }
-.tags .selected { border: 1px solid #aaff00; }
+.tags a:hover { background: #aaff00; }
+.tags .selected { background: #aaff00; }
 #top li a img { opacity: 0.5; }
 #top a:hover img { opacity: 0.7; }
 #top #logo { display: inline; }
@@ -304,5 +304,9 @@ textarea:focus {
 }
 .more {
   max-width:100%;
+}
+
+.description {
+   margin: 0 0 .5em 0;
 }
 
