--- a/techism/templates/base.html
+++ b/techism/templates/base.html
@@ -49,8 +49,7 @@
                 <ul>
                     <li><a href="/feed.ics">iCal</a></li>
                     <li><a href="/feeds/atom/upcomming_events">RSS</a></li>
-                    <li><a href="http://twitter.com/techism">Twitter (3 Tage)</a></li>
-                    <li><a href="http://twitter.com/techism_long">Twitter (90 Tage)</a></li>
+                    <li><a href="http://twitter.com/techism">Twitter</a></li>
                 </ul>
             </div>
         </div>
