--- a/techism/templates/base.html
+++ b/techism/templates/base.html
@@ -34,7 +34,7 @@
             <div id="left">
                 <ul>
                     <li><a href="/impressum/">Impressum</a></li>
-                    <li><a href="/about/">Über uns</a></li>
+                    <li><a href="/about/">Über</a></li>
                     {% if user.is_authenticated %}
                         {% if user.is_superuser %}
                             <li><a href="/admin/">Admin</a></li> 
@@ -56,6 +56,20 @@
     </footer>
     <script src="{% static 'js/techism.js' %}"></script>
     <script src="{% static 'jquery-1.8.2/jquery-1.8.2.min.js' %}"></script>
-    {% block scripts %} {% endblock %}
+    {% block scripts %} 
+    <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-19569985-1']);
+    _gaq.push(['_gat._anonymizeIp']);
+    _gaq.push(['_setDomainName', '.techism.de']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+    </script>
+    
+    {% endblock %}
 </body>
 </html>
