Handle tags without event/orgs

--- a/techism/templates/events/index.html
+++ b/techism/templates/events/index.html
@@ -28,7 +28,7 @@
     {% else %}
         <article class="vevent">
             <section>
-                <p>No events are available.</p>
+                <p>Zur Zeit sind keine Events vorhanden.</p>
             </section>
         </article>
     {% endif %}  
