--- a/techism/templates/organizations/index.html
+++ b/techism/templates/organizations/index.html
@@ -39,7 +39,7 @@
 {% else %}
     <div id="content">
         <div class="content">
-            <p>Keine Organisationen hinterlegt.</p>
+            <p>Zur Zeit sind keine Gruppen vorhanden.</p>
         </div>
     </div>
 {% endif %} 
